# pysongbook

./: pyproject.toml
pysongbook/: __main__.py  io.py  model.py
test/: test_io.py
test/data/: 1970 - Chinaski.tex  ahoj_slunko.tex  ahoj_slunko.txt
